# correccionExamenes

./: .env  ClienteAgenteRemoto.py  README.md  cliente_llm.py  experimento.py  generador_csv.py  main.py  mlflow.db  mlflow_client.py  prueba_inicial_main.py  pyproject.toml  servidor_mock.py
documentacion/: configuracion_modelo.txt  encender_servidor_llm.md  resultados.csv
metricas/: base.py  error_nota.py  exact_match.py  latencia.py  tamaño_contexto.py  tamaño_entrada.py
mlruns/5/a5bab6d868104d8e8f65884af97ce596/artifacts/outputs/chunk_0/: tmpem_l4biz.json
mlruns/6/3b83ed34902543b38b3cb1fce2d6eda1/artifacts/outputs/chunk_0/: tmpbtgu5aqz.json
mlruns/6/3b83ed34902543b38b3cb1fce2d6eda1/artifacts/outputs/chunk_1/: tmpxk_xnpdo.json
mlruns/6/3b83ed34902543b38b3cb1fce2d6eda1/artifacts/outputs/chunk_10/: tmpj7rxi8is.json
mlruns/6/3b83ed34902543b38b3cb1fce2d6eda1/artifacts/outputs/chunk_11/: tmpazkum1p2.json
mlruns/6/3b83ed34902543b38b3cb1fce2d6eda1/artifacts/outputs/chunk_12/: tmpq86dx_er.json
mlruns/6/3b83ed34902543b38b3cb1fce2d6eda1/artifacts/outputs/chunk_13/: tmprvocdsft.json
mlruns/6/3b83ed34902543b38b3cb1fce2d6eda1/artifacts/outputs/chunk_14/: tmp4ywokgek.json
mlruns/6/3b83ed34902543b38b3cb1fce2d6eda1/artifacts/outputs/chunk_15/: tmpv8u_i6f8.json
mlruns/6/3b83ed34902543b38b3cb1fce2d6eda1/artifacts/outputs/chunk_16/: tmp244or64o.json
mlruns/6/3b83ed34902543b38b3cb1fce2d6eda1/artifacts/outputs/chunk_17/: tmpgfl9w4_e.json
mlruns/6/3b83ed34902543b38b3cb1fce2d6eda1/artifacts/outputs/chunk_18/: tmpopqlz0sz.json
(+19 files in other folders)
